# BookReader

./: CMakeLists.txt  README.md  imagelabel.h  main.cpp  mainwindow.cpp  mainwindow.h  searchdialog.cpp  searchdialog.h
